--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/LeoVegascom/743999698477861-information-security-analyst'>LeoVegas.com Information Security Analyst | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939842'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
 <p><span class="badge badge-light">Norwalk</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -51,11 +55,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939846'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939846'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939847'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939847'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -71,7 +75,7 @@
 <p><span class="badge badge-light">Reston, Virginia  Reston, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/liferay/job/ogUrbfww'>Liferay, Inc. Careers - Information Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/ogUrbfww'>Liferay, Inc. Careers - Information Security Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -143,7 +147,7 @@
 <p><span class="badge badge-light">San Francisco, California  San Francisco Columbus</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1938984'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
+<h5><a href='https://boards.greenhouse.io/corelight/jobs/1938984'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Francisco Columbus</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -157,7 +161,7 @@
 <p><span class="badge badge-light">Baltimore, Maryland Baltimore, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fullstory/jobs/4500736002'>Job Application for Security Compliance Analyst at FullStory</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fullstory/jobs/4500736002'>Job Application for Security Compliance Analyst at FullStory</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -181,7 +185,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-software-engineer-7186'>Cyber Security Software Engineer - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-software-engineer-7186'>Cyber Security Software Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -209,7 +213,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vibrenthealth/job/og9sbfwM'>Vibrent Health Careers - Sr. Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vibrenthealth/job/og9sbfwM'>Vibrent Health Careers - Sr. Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -217,7 +221,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/sr-security-systems-analyst-10333'>Sr. Security Systems Analyst - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/sr-security-systems-analyst-10333'>Sr. Security Systems Analyst - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -253,7 +257,7 @@
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -310,7 +314,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ashcompanies/job/oFWqbfwW'>American Specialty Health, Inc. Careers - Information Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ashcompanies/job/oFWqbfwW'>American Specialty Health, Inc. Careers - Information Security Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -363,7 +367,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Springfield, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/f879f540-d971-47a5-aa60-2d852031b86f'>Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<h5><a href='https://jobs.lever.co/prominentedge/f879f540-d971-47a5-aa60-2d852031b86f'>Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -399,7 +403,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -423,7 +427,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://apply.workable.com/wavestrong/j/6F90121359/'>Sr. Security Engineer (Symantec / Blue Coat ProxySG) - WaveStrong</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/wavestrong/j/6F90121359/'>Sr. Security Engineer (Symantec / Blue Coat ProxySG) - WaveStrong</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Description. Exciting Sr. Security Engineer (Symantec / Blue Coat ProxySG), 12 
 months contract Bloomington, IL. Requirements. Primary responsibilities will?...</p>
@@ -433,7 +437,7 @@ months contract Bloomington, IL. Requirements. Primary responsibilities will?...
 <p>16 Out 2019 ... Quem somos?A Zup desenvolve produtos digitais disruptivos que impactam a 
 vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=suNSMgwG&__jvsc=Twitter&bid=nENhnMwm'>WP Engine Careers - Senior Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=suNSMgwG&__jvsc=Twitter&bid=nENhnMwm'>WP Engine Careers - Senior Security Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -443,10 +447,6 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/vgs/af76e96c-857b-46d0-9677-563e793913f1'>Very Good Security - Senior Backend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
-<p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
